profile picture in header, text alignment within header correct

--- a/app/assets/stylesheets/auth_form.css
+++ b/app/assets/stylesheets/auth_form.css
@@ -1,7 +1,7 @@
 .auth-section {
   box-sizing: border-box;
   margin: auto;
-  margin-top: 200px;
+  margin-top: 100px;
   width: 300px;
   padding: 20px;
   border: 1px solid black;
